Support passing user id for Personalization as part of search request
Description:
============
This change introduces ability ot pass user id as part of search request to be used by Personalize response processor.
SearchExtSpec will be used to support getting user id as well as other personalize related request parameters to personalize search results.

Check list:
===========
- [x] New functionality includes testing.
  - [x] All tests pass
- [x] New functionality has been documented.
  - [x] New functionality has javadoc added
- [x] Commits are signed as per the DCO using --signoff

Signed-off-by: Ketan Kulkarni <kektnr@amazon.com>